# paparazzi_log_parsing

./: .gitignore  .gitmodules  Makefile  README.md  create_logbook.py  logbook.m  parse_logs.py
cpp/: .gitignore  CMakeLists.txt  Makefile  fastreader.cpp
matlab/: cycl_logger.m  debug_flight.m  kml.m  log2struct.m  plot_rotor.m  plotter.mlapp  read_imu_log.m  read_rotorcraft_log.m  rot_wing_25kg.m  rot_wing_7kg.m  rotwing_flight_envelope.m
matlab/3d_animation/: convert3Dmodel.m  cycl_pprz_3d_animation.m  plot3Dmodel.m  pprz_3d_animation.m
matlab/math/: get_ic.m  quat_comp.m  quat_inv.m  quat_inv_comp.m  quat_of_axis_angle.m  rmat_of_quat.m
matlab/plotters/: cycl_draw_mode_transitions.m  cycl_fill_mode_regions.m  cycl_plot_actuators.m  cycl_plot_airspeed.m  cycl_plot_defl.m  cycl_plot_eff_mat.m  cycl_plot_eul.m  cycl_plot_guidance_indi_hybrid.m  cycl_plot_imu_scaled.m  cycl_plot_rc_controls.m  cycl_plot_rpm.m  cycl_plot_speed.m  cycl_plot_stab_attitude.m  cycl_plot_w.m  cycl_plot_wdot.m  (+32 more)
new_matlab/: debug_data.m  debug_flight.m  estimate_effectiveness.m  indoor_test_flight.m  messages.m  parselog.m  plot_actuators.m  plot_body_rates_accel.m  plot_ekf2.m  plot_energy.m  plot_errors.m  plot_esc.m  plot_eul_zxy.m  plot_gps.m  plot_hybrid_guidance.m  plot_imu.m  plot_quat.m  plot_rotorcraft_fp.m  plot_rotorcraft_status.m  visualize_3d.m
new_python/: messages.py  parselog.py
pprz_attitude/: debug_quaternions.m  eulers_of_quat.m  quat_comp_inv.m  quat_of_eulers.m  quat_of_eulers_paper.m  quat_wrap_shortest.m
python/: messages.py  plotting_tools.py  readlog.py
(+87 files in other folders)
